2007-07-17  Simon Budig  <simon@gimp.org>

	* app/text/gimptext-private.h
	* app/text/gimptextlayout.c
	* app/text/gimptextlayout-render.c: Fix text rendering for xres != yres.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpmenudock.c (gimp_menu_dock_new): unref the context.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* app/core/gimptoolinfo.c (gimp_tool_info_new): use the tool-info
	identifier as the name of the tool-options object.

	* app/paint/gimppaintoptions.c (gimp_paint_options_new): use the
	paint-info identifier as the name of the paint-options object.

	* app/paint/gimp-paint.c (gimp_paint_register): added parameter check.

	* app/tools/gimp-tools.c (gimp_tools_init): formatting.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginprocedure.c
	(gimp_plug_in_procedure_set_file_proc): plugged tiny memory leak.

	* libgimpcolor/gimprgb.c (gimp_rgb_min) (gimp_rgb_max): formatting.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpconfigwriter.c (gimp_config_writer_finish):
	don't free the writer struct too early.

2007-07-16  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-new.c (gimp_image_new_get_last_template): sync
	with the default template. Fixes bug #457286.

2007-07-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/uri/uri.c
	* plug-ins/uri/uri-backend.h: get the procedure help strings from
	the backend abstraction.

	* plug-ins/uri/uri-backend-gnomevfs.c
	* plug-ins/uri/uri-backend-libcurl.c
	* plug-ins/uri/uri-backend-wget.c: provide help strings.

2007-07-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/png.c: only register one save MIME handler.
	Fixes bug #457045.

2007-07-15  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c (struct
	_GimpRectangleToolPrivate): Added members to keep track of for
	what shell scale the handle sizes were calculated. This is
	necessary so that in
	(gimp_rectangle_tool_control): we only update the handle sizes